--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/croissant_one"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="EduResource"
         android:textAlignment="center"
         android:textSize="50sp"
