--- a/app/src/main/res/layout/activity_sem3.xml
+++ b/app/src/main/res/layout/activity_sem3.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="40dp"
     android:background="#efdeff"
-    tools:context=".SemList">
+    tools:context=".Sem4">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,78 +15,68 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="sans-serif-condensed-light"
-        android:text="Select Semester"
+        android:text="Semester 3"
         android:textColor="#000"
         android:textSize="34sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/sem1btn"
+        android:id="@+id/dsa"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 1"
+        android:text="DSA"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/sem2btn"
+        android:id="@+id/cs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 2"
+        android:text="CS"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/sem3btn"
+        android:id="@+id/java"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 3"
+        android:text="JAVA"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/sem4btn"
+        android:id="@+id/ddc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 4"
+        android:text="DDC"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/sem5btn"
+        android:id="@+id/pts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 5"
+        android:text="PTS"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/sem6btn"
+        android:id="@+id/etc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Semester 6"
-        android:textColor="#fff"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/sem7btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="22dp"
-        android:background="@drawable/rounded_border"
-        android:text="Semester 7"
+        android:text="ETC"
         android:textColor="#fff"
         android:textSize="16sp" />
 
