--- a/app/src/main/res/layout/activity_secondpage.xml
+++ b/app/src/main/res/layout/activity_secondpage.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:padding="40dp"
     android:background="#efdeff"
-    tools:context=".Sem4">
+    tools:context=".SemList">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,50 +15,61 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="sans-serif-condensed-light"
-        android:text="Semester 2"
+        android:text="Materials"
         android:textColor="#000"
         android:textSize="34sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/pps2"
+        android:id="@+id/cur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="C++"
+        android:text="Curriculum"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/maths2"
+        android:id="@+id/gate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Maths-2"
+        android:text="GATE"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/Ph"
+        android:id="@+id/pla"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="PHY"
+        android:text="Placement"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/eng"
+        android:id="@+id/ielts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="ENG"
+        android:text="IELTS"
         android:textColor="#fff"
         android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/cat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:background="@drawable/rounded_border"
+        android:text="CAT"
+        android:textColor="#fff"
+        android:textSize="16sp" />
+
 
 
 </LinearLayout>
