--- a/app/src/main/res/layout/activity_sem6.xml
+++ b/app/src/main/res/layout/activity_sem6.xml
@@ -15,48 +15,58 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:fontFamily="sans-serif-condensed-light"
-        android:text="Semester 2"
+        android:text="Semester 6"
         android:textColor="#000"
         android:textSize="34sp"
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/pps2"
+        android:id="@+id/daie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="C++"
+        android:text="DAIE"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/maths2"
+        android:id="@+id/lt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="Maths-2"
+        android:text="LT"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/Ph"
+        android:id="@+id/aos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="PHY"
+        android:text="AOS"
         android:textColor="#fff"
         android:textSize="16sp" />
 
     <Button
-        android:id="@+id/eng"
+        android:id="@+id/py"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="22dp"
         android:background="@drawable/rounded_border"
-        android:text="ENG"
+        android:text="PY(DA)"
+        android:textColor="#fff"
+        android:textSize="16sp" />
+
+    <Button
+        android:id="@+id/fsd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:background="@drawable/rounded_border"
+        android:text="FSD"
         android:textColor="#fff"
         android:textSize="16sp" />
 
